Fixed preparation of data and main such that it runs on the DRIVE and CHASEDB1 datasets. Also wrote fit_testdata file that does not train but takes a model and uses it to evaluate.

--- a/dataPrepare.ipynb
+++ b/dataPrepare.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,11 +13,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cropping is done.\n"
+     ]
+    }
+   ],
+   "source": [
+    "crop(\"data/DRIVE_preprocessed/test/unet_result/original\", \"data/DRIVE_preprocessed/test/unet_result/cropped\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "threshold(\"data/DRIVE_preprocessed/test/unet_result/cropped\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "PATH = 'C:/Users/Kaare/Documents/Git projects/unet'"
+    "PATH = \"C:/Users/Kaare/Documents/Git projects/unet\""
    ]
   },
   {
@@ -30,9 +56,9 @@
     "\n",
     "TEST_PATH = PATH + \"/data/DRIVE/test\"\n",
     "\n",
-    "PROCESSED_TRAIN_PATH = PATH + '/data/DRIVE_preprocessed/train'\n",
+    "PROCESSED_TRAIN_PATH = PATH + \"/data/DRIVE_preprocessed/train\"\n",
     "\n",
-    "PROCESSED_TEST_PATH = PATH + '/data/DRIVE_preprocessed/test'"
+    "PROCESSED_TEST_PATH = PATH + \"/data/DRIVE_preprocessed/test\""
    ]
   },
   {
@@ -182,31 +208,11 @@
     "    if(i >= num_batch):\n",
     "        break"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## create .npy data\n",
-    "\n",
-    "If your computer has enough memory, you can create npy files containing all your images and masks, and feed your DNN with them."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image_arr,mask_arr = geneTrainNpy(\"data/membrane/train/aug/\",\"data/membrane/train/aug/\")\n",
-    "#np.save(\"data/image_arr.npy\",image_arr)\n",
-    "#np.save(\"data/mask_arr.npy\",mask_arr)"
-   ]
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "0bddfeb57c1fb75223dbf39449e882687a67de532191dbbd9d55c4d4d1df7aac"
+   "hash": "e915bb2a223713ebf3f14e949718dd9417c9b165e04af4e6105fcff65c562f38"
   },
   "kernelspec": {
    "display_name": "Python 3.9.7 64-bit ('ml': conda)",
