Fixed true labels

--- a/dataPrepareChase.ipynb
+++ b/dataPrepareChase.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,46 +70,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Scaling is done.\n",
       "Scaling is done.\n"
      ]
     }
    ],
    "source": [
-    "scale(PROCESSED_TRAIN_PATH + \"/images\", PROCESSED_TRAIN_PATH + \"/images\", 60)"
+    "scale(PROCESSED_TRAIN_PATH + \"/images\", PROCESSED_TRAIN_PATH + \"/images\", 60)\n",
+    "scale(PROCESSED_TRAIN_PATH + \"/labels\", PROCESSED_TRAIN_PATH + \"/labels\", 60)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Padding is done.\n",
       "Padding is done.\n"
      ]
     }
    ],
    "source": [
     "pad(PROCESSED_TRAIN_PATH + \"/images\", PROCESSED_TRAIN_PATH + \"/images\", False)\n",
-    "#pad(PROCESSED_TRAIN_PATH + \"/labels\", PROCESSED_TRAIN_PATH + \"/labels\", False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "threshold(PATH + \"/data/CHASEDB1_preprocessed/test/unet_result\")"
+    "pad(PROCESSED_TRAIN_PATH + \"/labels\", PROCESSED_TRAIN_PATH + \"/labels\", False)"
    ]
   }
  ],
